# esercitazioni_pcs

esercitazione1/: CMakeLists.txt  code.cpp  printargs.cpp
esercitazione2/: CMakeLists.txt  bubblesort.cpp  codice_esercizio_2.cpp  prova.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  is_sorted.hpp  measure_sort.cpp  print_vector.hpp  sorting.hpp  test_bubble_sort.cpp  test_insertion_sort.cpp  test_selection_sort.cpp
esercitazione5/: CMakeLists.txt  debug.csv  grafici_di_confronto.m  measure_sort.cpp  release.csv  rilevazioni.txt  sorting.hpp  test_bubble_sort.cpp  test_insertion_sort.cpp  test_mergesort.cpp  test_quickottimo.cpp  test_quicksort.cpp  test_selection_sort.cpp
esercitazione5/build_es5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  tempi_sort.csv  test_bubblesort  test_insertionsort  test_mergesort  test_quickottimo  test_quicksort  test_selectionsort
esercitazione5/build_es5/Testing/Temporary/: CTestCostData.txt
esercitazione8/: CMakeLists.txt  test_undirected_graph.cpp  undirected_edge.hpp  undirected_graph.hpp
