cmake_minimum_required(VERSION 3.20)
project(esercitazione4)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")

set(SRC_test_sorts timecounter.cpp measure_sort.cpp)
add_executable(measure_sorts ${SRC_test_sorts})



add_executable(test_bubblesort test_bubble_sort.cpp)
add_test(NAME bubblesort COMMAND test_bubble_sort)

add_executable(test_insertionsort test_insertion_sort.cpp)
add_test(NAME insertionsort COMMAND test_insertion_sort)


add_executable(test_selectionsort test_selection_sort.cpp)
add_test(NAME selectionsort COMMAND test_selection_sort)

enable_testing()