cmake_minimum_required(VERSION 3.20)
project(esercitazione5)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")
set(SRC_test_sorts timecounter.cpp measure_sort.cpp)
add_executable(main ${SRC_test_sorts})
add_executable(test_bubblesort test_bubble_sort.cpp)
add_test(NAME bubblesort COMMAND test_bubblesort)
add_executable(test_insertionsort test_insertion_sort.cpp)
add_test(NAME insertionsort COMMAND test_insertionsort)
add_executable(test_selectionsort test_selection_sort.cpp)
add_test(NAME selectionsort COMMAND test_selectionsort)
add_executable(test_mergesort test_mergesort.cpp)
add_test(NAME mergesort COMMAND test_mergesort)
add_executable(test_quicksort test_quicksort.cpp)
add_test(NAME quicksort COMMAND test_quicksort)
add_executable(test_quickottimo test_quickottimo.cpp)
add_test(NAME quickottimo COMMAND test_quickottimo)
enable_testing()